# ecoacher

./: .gitignore  AGENTS.md  README.md  ecoacher-dev  main.py  pyproject.toml  requirements.txt
qml/: Main.qml
qml/components/: CorrectedSection.qml  ExitConfirmDialog.qml  ExplanationsSection.qml  InputSection.qml  ReadOnlyTextSection.qml  StatusFooter.qml
src/ecoacher/: __init__.py  main.py
src/ecoacher/app/: __init__.py  controller.py
src/ecoacher/config/: __init__.py  constants.py
src/ecoacher/ipc/: __init__.py  service.py
src/ecoacher/logging/: __init__.py  setup.py
src/ecoacher/opencode/: __init__.py  client.py  request.py
src/ecoacher/spellcheck/: __init__.py  manager.py
src/ecoacher/text/: __init__.py  diff.py
tests/: conftest.py  test_app_controller.py  test_constants.py  test_ipc_service.py  test_logging_setup.py  test_main_module.py  test_main_qml_activation.py  test_opencode_client.py  test_opencode_request.py  test_package_modules.py  test_spellcheck_manager.py  test_word_diff.py
