[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecoacher"
version = "0.1.0"
description = "English Coacher desktop app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.8,<7",
    "opencode-ai>=0.1.0a36",
    "colorlog>=6.8,<7",
    "language-tool-python>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[project.scripts]
ecoacher = "ecoacher.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
